# AgentX

./: .gitignore  LICENSE  MANIFEST.in  README.md  README_CN.md  README_JA.md  pyproject.toml  requirements.txt
AgentX/: __init__.py  __main__.py  config.py  data_types.py  main.py  pydantic_models.py
AgentX/agents/: __init__.py  runner.py
AgentX/commands/: registry.py
AgentX/constants/: identity.py  prompts.py  tool_names.py
AgentX/coordinator/: __init__.py  coordinator_mode.py
AgentX/engine/: context.py  query.py  query_engine.py  tombstone.py
AgentX/memdir/: __init__.py  find_relevant_memories.py  memdir.py  memory_age.py  memory_scan.py  memory_types.py  paths.py
AgentX/memory/: __init__.py  memdir.py  session_memory.py
AgentX/permissions/: checker.py  classifier.py  modes.py
AgentX/services/: content_replacement.py  context_collapse.py  microcompact.py  snip_compaction.py  task_budget.py  token_budget.py
AgentX/skills/: __init__.py
AgentX/state/: app_state.py
AgentX/tasks/: manager.py
AgentX/tools/: __init__.py  agent_definitions.py  ask_user_question_tool.py  base.py  bash_tool.py  brief_tool.py  config_tool.py  file_edit_tool.py  file_read_tool.py  file_write_tool.py  glob_tool.py  grep_tool.py  image_validation.py  mcp_tools.py  notebook_edit_tool.py  plan_mode_tool.py  send_message_tool.py  skill_tool.py  sleep_tool.py  task_tools.py  todo_write_tool.py  tool_search_tool.py  web_fetch_tool.py  web_search_tool.py
AgentX/ui/: renderer.py  repl.py  stream_renderer.py
AgentX/utils/: __init__.py  cost_tracker.py  history.py  hooks.py  setup.py  text.py  tokens.py
claude_code/: __init__.py  __main__.py  config.py  data_types.py  main.py  pydantic_models.py
claude_code/agents/: __init__.py  runner.py
claude_code/commands/: registry.py
claude_code/constants/: cyber_risk.py  prompts.py  tool_names.py
claude_code/coordinator/: __init__.py  coordinator_mode.py
claude_code/engine/: context.py  query.py  query_engine.py
claude_code/memory/: __init__.py  memdir.py  session_memory.py
claude_code/permissions/: checker.py  modes.py  path_validator.py
claude_code/skills/: __init__.py
claude_code/state/: app_state.py
claude_code/tasks/: manager.py
claude_code/tools/: __init__.py  agent_definitions.py  agent_tool.py  ask_user_question_tool.py  base.py  bash_tool.py  brief_tool.py  config_tool.py  file_edit_tool.py  file_read_tool.py  glob_tool.py  (+14 more)
docs/: AGENT_ORCHESTRATION_DESIGN.md  IMPLEMENTATION_STEPS.md  SOURCE_EXTRACTION.md  TS_VS_PYTHON_QUERY_DIFF.md
tests/: conftest.py  test_agent_tool.py  test_comprehensive.py  test_memory_agent.py  test_query_engine.py  test_query_loop.py  test_query_loop_real.py  test_quick.py
(+61 files in other folders)
