[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-code-py"
version = "0.1.0"
description = "Claude Code Python - AI coding assistant (OpenAI provider pattern)"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30.0",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
claude-code = "AgentX.main:main"

[tool.setuptools.packages.find]
include = ["AgentX*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
